--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ main {
 
 #picture > img {
   grid-area: aside;
-  width: 100%;
-  object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 footer {
